# paukenschlag

./: .gitignore  CMakeLists.txt  main.cpp
art/: A_large_blank_world_map_with_oceans_marked_in_blue.xcf  m113.xcf  rock.xcf
art/cf_ter_ppc_01/: license.txt
cmake_modules/: FindSFML.cmake
data/floor/: Sandstone tiles - T_Tile_Sandstone_02_4096_D.png _ OpenGameArt.org.html
data/sounds/: ak47.html  empty.html  glock.html
src/: BodyAnimation.cpp  BodyAnimation.h  BulletImpact.cpp  BulletImpact.h  Character.cpp  Character.h  Constants.h  Cover.cpp  Cover.h  Crate.cpp  Crate.h  Door.cpp  Door.h  Effect.cpp  Effect.h  EffectData.cpp  EffectData.h  GameObject.cpp  GameObject.h  Ground.cpp  Ground.h  Guard.cpp  Guard.h  Hideaway.cpp  Hideaway.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  LOSChecker.cpp  LOSChecker.h  LegAnimation.cpp  LegAnimation.h  Level.cpp  Level.h  LevelArea.cpp  LevelArea.h  LongEffect.cpp  LongEffect.h  PlayerViewport.cpp  (+11 more)
src/ai/: AStarPath.cpp  AStarPath.h  EnemyAI.cpp  EnemyAI.h  NavGrid.cpp  NavGrid.h  SensorRectangle.cpp  SensorRectangle.h  WalkGrid.cpp  WalkGrid.h  WalkLineChecker.cpp  WalkLineChecker.h
src/goals/: EscapeArea.cpp  EscapeArea.h
src/guard/: FOVIndicator.cpp  FOVIndicator.h  Guard.cpp  Guard.h  GuardAI.cpp  GuardAI.h  GuardCombatTask.cpp  GuardCombatTask.h  GuardMonitorTask.cpp  GuardMonitorTask.h  GuardTask.cpp  GuardTask.h  Soldier.cpp  Soldier.h  SuspicionIndicator.cpp  SuspicionIndicator.h  WaitTask.cpp  WaitTask.h  WalkToTask.cpp  WalkToTask.h  WanderTask.cpp  WanderTask.h
src/levelgen/: Area.h  AreaDistributor.cpp  AreaDistributor.h  LevelGenInfo.cpp  LevelGenInfo.h  LevelGenerator.cpp  LevelGenerator.h
src/menu/: GameState.cpp  GameState.h  IngameState.cpp  IngameState.h  MainMenu.cpp  MainMenu.h  MissionEquip.cpp  MissionEquip.h  WorldMap.cpp  WorldMap.h
src/sfbl/: sfbl.cpp  sfbl.h
src/ui/: PlayerStatus.cpp  PlayerStatus.h
tests/: NormalDistTest.cpp
